--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -14,12 +14,13 @@
   	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
     	<param-name>jersey.config.server.provider.packages</param-name>
-    	<param-value>com.calltree_entries.restful</param-value>
+    	<param-value>com.calltree.services</param-value>
     </init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
   	<servlet-name>RestfulServices</servlet-name>
   	<url-pattern>/RestfulServices/*</url-pattern>
-  </servlet-mapping>    
+  </servlet-mapping>
+  
 </web-app>
